--- a/package.json
+++ b/package.json
@@ -2,17 +2,26 @@
   "private": true,
   "scripts": {
     "prod": "gulp --production",
-    "dev": "gulp watch"
+    "dev": "gulp watch",
+    "webpack": "export NODE_ENV=develpment && webpack --hide-modules",
+    "watch": "export NODE_ENV=develpment && webpack --hide-modules --watch",
+    "production": "export NODE_ENV=production && webpack --hide-modules"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
+    "buble-loader": "^0.2.2",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-14",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
-    "vue": "^2.0.1",
-    "vue-resource": "^1.0.3"
+    "vue": "^2.5.16",
+    "vue-resource": "^1.0.3",
+    "webpack": "^2.2.0-rc.3"
   }
 }
